--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -40,7 +40,7 @@
     --font-size-extra-small: 0.775rem;
     --font-size-small: 0.875rem;
     --font-size-medium: 1rem;
-    --font-size-large: 1.25rem;
+    --font-size-large: 1.35rem;
     --font-size-extra-large: 1.5rem;
 
     /* Border Radius */
